--- a/frontend/src/app/pacientes/formulario/telefone/paciente-form-telefone.component.html
+++ b/frontend/src/app/pacientes/formulario/telefone/paciente-form-telefone.component.html
@@ -1,9 +1,52 @@
 <div class="ui-g ui-fluid" [formGroup]="telefone">
     <div class="ui-g-12">
-        <div nInputMask mask="(99)" tooltip="Informe o DDD." placeholder="(__)" label="DDD" formControlName="ddd" class="ui-g-3 ui-sm-12"></div>
-        <div nInputMask mask="9 9999-9999" tooltip="Informe o telefone." placeholder="_ ____-____" label="Telefone" formControlName="numero" class="ui-g-6 ui-sm-12"></div>
-        <div nDropdown label="Tipo de Telefone" [options]="opcoesDeTipoDeTelefone" formControlName="tipo" class="ui-g-3 ui-sm-12"></div>
-        <div nTextArea label="Observação" formControlName="observacao" class="ui-g-12 ui-sm-12 ui-float-label"></div>
+        <div class="ui-g-3 ui-sm-12">
+            <span class="ui-float-label">
+                <p-inputMask
+                    pInputText
+                    mask="(99)"
+                    type="text"
+                    placeholder="(__)"
+                    formControlName="ddd"
+                    pTooltip="Informe o DDD."
+                ></p-inputMask>
+                <label>DDD</label>
+            </span>
+        </div>
+        <div class="ui-g-6 ui-sm-12">
+            <span class="ui-float-label">
+                <p-inputMask
+                    pInputText
+                    placeholder="_ ____-____"
+                    mask="9 9999-9999"
+                    type="text"
+                    formControlName="numero"
+                    pTooltip="Informe o telefone."
+                ></p-inputMask>
+                <label>Telefone</label>
+            </span>
+        </div>
+        <div class="ui-g-3 ui-sm-12">
+            <span class="ui-float-label">
+                <p-dropdown
+                    [options]="opcoesDeTipoDeTelefone"
+                    formControlName="tipo"
+                ></p-dropdown>
+                <label>Tipo de Telefone</label>
+            </span>
+        </div>
+        <div class="ui-g-12 ui-sm-12">
+            <span class="ui-float-label">
+                <textarea
+                    formControlName="observacao"
+                    [rows]="3"
+                    pInputTextarea
+                    autoResize="autoResize"
+                    pTooltip="Informe o observação."
+                ></textarea>
+                <label>Observação</label>
+            </span>
+        </div>
     </div>
     <div *ngIf="!telefone.value.indice">
         <p-button
