Incluindo campo prontuario em lista de pacientes

--- a/frontend/src/app/pacientes/formulario/paciente-list.component.html
+++ b/frontend/src/app/pacientes/formulario/paciente-list.component.html
@@ -18,6 +18,7 @@
             </p-column>
             <div nForm [formGroup]="paciente" class="ui-g-12">
                 <div nInputText label="Nome paciente" formControlName="nome" class="ui-g-12 ui-md-12 ui-fluid"></div>
+                <div nInputText label="Prontuario paciente" formControlName="prontuario" class="ui-g-12 ui-md-12 ui-fluid"></div>
             </div>
         </nCrudList>
     </div>
