Altera máscara de cartão SUS para evitar erro de validação

--- a/frontend/src/app/pacientes/components/pre-cadastro/pre-cadastro.component.html
+++ b/frontend/src/app/pacientes/components/pre-cadastro/pre-cadastro.component.html
@@ -89,7 +89,8 @@
                     <p-inputMask
                         formControlName="cartaoSus"
                         pInputText
-                        mask="999 9999 9999 9999"
+                        mask="999999999999999"
+                        placeholder="___ ____ ____ ____"
                         pTooltip="Informe o CNS do paciente."
                     ></p-inputMask>
                     <p-message
