Apagar camum dos campos de Observacao na aba Responsavel - BASIS-182733

--- a/frontend/src/app/pacientes/formulario/telefone/paciente-form-telefone.component.html
+++ b/frontend/src/app/pacientes/formulario/telefone/paciente-form-telefone.component.html
@@ -32,7 +32,12 @@
         (onClick)="atualizarEdicao()"
         ></p-button>
     </div>
-    <basis-datatable type="memory" [disableView]="true" [value]="telefones.value"  (buttonClick)="datatableClick($event)">
+    <basis-datatable type="memory" 
+    [disableView]="true" 
+    [value]="telefones.value"  
+    (buttonClick)="datatableClick($event)"
+    #datatable
+    >
         <p-column header="Tipo" field="tipo"></p-column>
         <p-column header="DDD" field="ddd"></p-column>
         <p-column header="Telefone" field="numero"></p-column>
