--- a/frontend/src/app/pacientes/formulario/paciente-form.component.html
+++ b/frontend/src/app/pacientes/formulario/paciente-form.component.html
@@ -1,4 +1,4 @@
-<nCrudForm [form]="paciente" [action]="savePaciente(this.paciente)">
+<nCrudForm [form]="paciente" >
     <div class="ui-g-12">
         <p-accordion>
             <p-accordionTab header="Dados Pessoais" [selected]="true">
