--- a/frontend/src/app/consulta/components/emergencia/emergencia.component.html
+++ b/frontend/src/app/consulta/components/emergencia/emergencia.component.html
@@ -174,6 +174,7 @@
                             type="button"
                             label="Cancelar"
                             pTooltip="Cancelar marcação de consulta."
+                            [routerLink]="['/listar-consultas']"
                         ></button>
                     </div>
                     <div class="ui-g-3">
