--- a/frontend/src/app/pacientes/formulario/endereco/paciente-form-endereco.component.html
+++ b/frontend/src/app/pacientes/formulario/endereco/paciente-form-endereco.component.html
@@ -25,7 +25,7 @@
                     [suggestions]="municipios"
                     [dropdown]="true"
                     formControlName="municipioId"></p-autoComplete>
-                <label>Municípios</label>
+                <label>Município</label>
             </span>
         </div>
         <div nInputText label="Logradouro" formControlName="logradouro" class="ui-g-4 ui-sm-12" required></div>
@@ -39,13 +39,13 @@
     <div class="ui-g-12">
         <div nCheck label="Correspondência?" required formControlName="correspondencia" class="ui-g-9"></div>
     </div>
-    <div *ngIf="!endereco.value.indice">
+    <div *ngIf="!controle">
         <p-button
             label="Adicionar"
             [disabled]="endereco.invalid"
-            [disabled]="controle ? true : null"
             type="button"
-            (onClick)="adicionarEnderecoALista()"></p-button>
+            (onClick)="adicionarEnderecoALista()"
+            style="margin-left: 20px; width: 90px;"></p-button>
     </div>
     <div *ngIf="controle">
         <p-button
@@ -53,6 +53,7 @@
         label="Editar"
         type="button"
         (onClick)="atualizarEdicao()"
+        style="margin-left: 20px; width: 90px;"
         ></p-button>
     </div>
     <basis-datatable type="memory" [disableView]="true" [value]="enderecos.value" (buttonClick)="datatableClick($event)">
