--- a/frontend/src/app/pacientes/formulario/paciente-list.component.html
+++ b/frontend/src/app/pacientes/formulario/paciente-list.component.html
@@ -2,7 +2,7 @@
 <div class="card card-w-title">
     <h1>Pacientes</h1>
     <div class="ui-g">
-        <nCrudList [form]="paciente">
+        <nCrudList [form]="paciente" [datatableExtraParams]="datatableExtraParams">
             <p-column header="Prontuário" field="prontuario"></p-column>
             <p-column header="Nome" field="nome"></p-column>
             <p-column header="Nome da Mãe" field="genitores">
