--- a/frontend/src/app/consulta/components/listar-consultas/listar-consultas.component.html
+++ b/frontend/src/app/consulta/components/listar-consultas/listar-consultas.component.html
@@ -4,157 +4,91 @@
             <h1>Pesquisar Consultas</h1>
             <div class="ui-g-2 ui-sm-12">
                 <span class="ui-float-label">
-                    <p-inputMask
-                        mask="9999999/9"
-                        pTooltip="Digite o número do prontuário do paciente."
-                        formControlName="prontuario"
-                    ></p-inputMask>
-
+                    <input type="text" pInputText pTooltip="Digite o número da consulta." formControlName="consulta"
+                        (blur)="pegarNumeroConsulta($event)"   />
+                    <label>Consulta</label>
+                </span>
+            </div>
+            <div class="ui-g-5 ui-sm-12">
+                <span class="ui-float-label">
+                    <p-autoComplete field="nome" [suggestions]="pacientes" pInputText formControlName="nome"
+                        (completeMethod)="listarPacientes($event)" (onBlur)="pegarPaciente($event)" [dropdown]="true"
+                        >
+                    </p-autoComplete>
+                    <label>Nome</label>
+                </span>
+            </div>
+            <div class="ui-g-2 ui-sm-12">
+                <span class="md-inputfield">
+                    <input pInputText disabled="true" [(ngModel)]="paciente" formControlName="prontuario" />
                     <label>Prontuário</label>
                 </span>
             </div>
             <div class="ui-g-2 ui-sm-12">
                 <span class="ui-float-label">
-                    <input type="text" pInputText formControlName="codigo" />
-                    <label>Código</label>
-                </span>
-            </div>
-            <div class="ui-g-4 ui-sm-12">
-                <span class="ui-float-label">
-                    <input type="text" pInputText formControlName="nome" />
-                    <label>Nome</label>
+                    <input type="text" pTooltip="Digite a grade." pInputText formControlName="grade"
+                        (blur)="pegarGrade($event)"  />
+                    <label>Grade</label>
                 </span>
             </div>
             <div class="ui-g-12"></div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
-                    <input
-                        type="text"
-                        pInputText
-                        pTooltip="Digite o número da consulta."
-                        formControlName="consulta"
-                    />
-                    <label>Consulta</label>
+            <div class="ui-g-3 ui-sm-12">
+                <span class="md-inputfield">
+                    <p-dropdown optionLabel="nome" [options]="crm" pInputText formControlName="profissional"
+                        (onClick)="pegarProfissional($event)" [filter]="true" placeholder="Selecione"
+                        ></p-dropdown>
+                    <label>Profissional</label>
                 </span>
             </div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
-                    <input
-                        type="text"
-                        pInputText
-                        pTooltip="Digite Código Central."
-                        formControlName="codigoCentral"
-                    />
-                    <label>Código Central</label>
-                </span>
-            </div>
-
-            <div class="ui-g-12"></div>
-
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
-                    <input type="text" pInputText formControlName="consultaAnterior" />
-                    <label>Consulta Anterior</label>
-                </span>
-            </div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
-                    <p-dropdown
-                        type="text"
-                        pInputText
-                        pTooltip="Selecione a condição de atendimento."
-                        formControlName="condicaoAtendimento"
-                    ></p-dropdown>
-                    <label>Condição de Atendimento</label>
-                </span>
-            </div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
-                    <p-dropdown
-                        type="text"
-                        pInputText
-                        pTooltip="Selecione a especialidade."
-                        formControlName="especialidade"
-                    ></p-dropdown>
+            <div class="ui-g-3 ui-sm-12">
+                <span class="md-inputfield">
+                    <p-autoComplete field="especialidade" [suggestions]="especialidades" pInputText
+                        formControlName="especialidade" (completeMethod)="buscaEspecialidade()" 
+                        (onBlur)="pegarEspecialidade($event)"  [dropdown]="true">
+                    </p-autoComplete>
                     <label>Especialidade</label>
                 </span>
             </div>
             <div class="ui-g-2 ui-sm-12">
                 <span class="ui-float-label">
-                    <input
-                        type="text"
-                        pTooltip="Digite a grade."
-                        pInputText
-                        formControlName="grade"
-                    />
-                    <label>Grade</label>
+                    <input type="text" pInputText pTooltip="Digite Código Central." formControlName="codigoCentral"
+                        (blur)="pegarClinica($event)" />
+                    <label>Clínica Central</label>
                 </span>
             </div>
             <div class="ui-g-2 ui-sm-12">
                 <span class="ui-float-label">
-                    <p-calendar
+                     <p-calendar
                         [locale]="localizacao"
                         [yearRange]="anosDisponiveis"
                         [dateFormat]="formatoDeData"
                         monthNavigator="true"
                         yearNavigator="true"
                         formControlName="dataInicial"
+                        (onClickOutside)="pegaData()"
+                        showTime="true"
+                        [(ngModel)]="data"
                     ></p-calendar>
-                    <label>Data inicial</label>
+                    <label>Data Consulta</label>
                 </span>
-            </div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
-                    <p-calendar
-                        [locale]="localizacao"
-                        [yearRange]="anosDisponiveis"
-                        [dateFormat]="formatoDeData"
-                        monthNavigator="true"
-                        yearNavigator="true"
-                        formControlName="dataFinal"
-                    ></p-calendar>
-                    <label>Data final</label>
-                </span>
-            </div>
-
+            </div>        
             <div class="ui-g-12 ui-sm-12">
                 <div class="ui-g-2">
-                    <button
-                        pButton
-                        type="button"
-                        label="Pesquisar"
-                        pTooltip="Pesquisar consultas de paciente."
-                    ></button>
+                    <button pButton type="button" label="Pesquisar" pTooltip="Pesquisar consultas de paciente."
+                        (click)="datatable.refresh(changeUrl())">
+                    </button>
                 </div>
                 <div class="ui-g-2">
-                    <button
-                        pButton
-                        type="button"
-                        label="Limpar"
-                        pTooltip="Limpar pesquisa de consultas."
-                    ></button>
-                </div>
-                <div class="ui-g-2">
-                    <button
-                        pButton
-                        type="button"
-                        label="Exportar"
-                        pTooltip="Exportar arquivo de consultas."
-                    ></button>
+                    <button pButton type="button" label="Limpar" pTooltip="Limpar pesquisa de consultas."
+                        (click)="limparPesquisa()">
+                    </button>
                 </div>
             </div>
         </div>
-
         <div class="ui-g-12 ui-sm-12">
-            <basis-datatable
-            [disableEdit]="true"
-            [disableDelete]="true"
-            [disableView]="true"
-            #datatable type="server" 
-            [url]="searchUrl"
-            sortField="brand"
-            >
-                <p-column field="numeroConsulta" header="Consultas"></p-column>
+            <basis-datatable [disableEdit]="true" [disableDelete]="true" [disableView]="true" #datatable
+                (click)="selectConsulta()" [url]="searchUrl" sortField="brand">
+                <p-column field="numeroConsulta" header="Consultas" [sortable]="true"></p-column>
                 <p-column field="dataHoraDaConsulta" header="Data/Hora"></p-column>
                 <p-column field="condicaoDeAtendimentoId" header="Cond. Atend."></p-column>
                 <p-column field="clinicaCentralId" header="Central"></p-column>
@@ -165,6 +99,14 @@
                 <p-column field="profissional" header="Profissional"></p-column>
                 <p-column field="situacaoAtendimento" header="Sit. Atend."></p-column>
             </basis-datatable>
+            <div class="ui-g-12 ui-sm-12">
+                <div class="ui-g-2">
+                    <button pButton type="button" label="Exportar" pTooltip="Exportar arquivo de consultas."></button>
+                </div>
+                <div class="ui-g-2">
+                    <button pButton type="button" label="Histórico" pTooltip="Histórico de consultas."></button>
+                </div>
+            </div>
         </div>
     </form>
 </div>
