--- a/frontend/src/app/pacientes/formulario/telefone/paciente-form-telefone.component.html
+++ b/frontend/src/app/pacientes/formulario/telefone/paciente-form-telefone.component.html
@@ -1,6 +1,6 @@
 <div class="ui-g ui-fluid" [formGroup]="telefone">
     <div class="ui-g-12">
-        <div nDropdown required label="Tipo de Telefone" [options]="opcoesDeTipoDeTelefone" formControlName="tipo" (onChange)="setTypePhone($event)" class="ui-g-4 ui-sm-12"></div>
+        <div nDropdown required label="Tipo de Telefone" [options]="opcoesDeDDD" formControlName="tipo" (onChange)="tipoTelefone($event)" class="ui-g-4 ui-sm-12"></div>
         <div nDropdown required label="DDD" [options]="opcoesDeDDD" formControlName="ddd" class="ui-g-2 ui-sm-12"></div>
         <div nInputMask required [mask]="typeMask" tooltip="Informe o telefone." label="Telefone" formControlName="numero" class="ui-g-6 ui-sm-12"></div>
         <div class="ui-g-12 ui-sm-12">
