--- a/frontend/src/app/farmacia/farmacia/cadastro-medicamento/cadastro-medicamento.component.html
+++ b/frontend/src/app/farmacia/farmacia/cadastro-medicamento/cadastro-medicamento.component.html
@@ -1,18 +1,18 @@
 <div class="ui-g ui-fluid">
-    <form [formGroup]="form" (ngSubmit)="cadastrar()">
+        <h1>{{ medicamento.id ? (' Editar Medicamentos ') : (' Cadastrar Medicamentos ') }}</h1>
+    <form [formGroup]="form" (ngSubmit)="submit()">
         <div class="ui-g-12">
             <div class="ui-g-12">
-                <h1>Cadastrar Medicamento</h1>
             </div>
             <div class="ui-g-12">
                 <div class="ui-g-5 ui-sm-12">
                     <span class="ui-float-label">
-                        <input
-                            pInputText
+                        <input 
+                            pInputText 
                             type="text"
-                            pTooltip="Informe o Prontuario."
-                            formControlName="medicamento"
-                        />
+                            pTooltip="Informe o Prontuario." 
+                            formControlName="medicamento" 
+                            />
                         <label>Medicamento</label>
                     </span>
                 </div>
@@ -20,12 +20,12 @@
             <div class="ui-g-12">
                 <div class="ui-g-5 ui-sm-12">
                     <span class="ui-float-label">
-                        <input
-                            pInputText
-                            type="text"
-                            pTooltip="Informe o Prontuario."
-                            formControlName="descricao"
-                        />
+                        <input 
+                            pInputText 
+                            type="text" 
+                            pTooltip="Informe o Prontuario." 
+                            formControlName="descricao" 
+                            />
                         <label>Descrição Etiqueta</label>
                     </span>
                 </div>
@@ -33,11 +33,11 @@
             <div class="ui-g-12">
                 <div class="ui-g-5 ui-sm-12">
                     <span class="ui-float-label">
-                        <input
-                            pInputText
-                            type="text"
-                            pTooltip="Informe o Prontuario."
-                            formControlName="concentracao"
+                        <input 
+                        pInputText 
+                        type="text" 
+                        pTooltip="Informe o Prontuario." 
+                        formControlName="concentracao" 
                         />
                         <label>Concentração</label>
                     </span>
@@ -46,13 +46,13 @@
             <div class="ui-g-12">
                 <div class="ui-g-5 ui-sm-12">
                     <span class="ui-float-label">
-                        <p-autoComplete
-                            field="nome"
-                            [suggestions]="unidade"
+                        <p-autoComplete 
+                            field="nome" 
+                            [suggestions]="unidade" 
                             (completeMethod)="searchUnidade($event)"
-                            [dropdown]="true"
+                            [dropdown]="true" 
                             formControlName="unidade"
-                        ></p-autoComplete>
+                            ></p-autoComplete>
 
                         <label>Unidade</label>
                     </span>
@@ -61,13 +61,13 @@
             <div class="ui-g-12">
                 <div class="ui-g-5 ui-sm-12">
                     <span class="ui-float-label">
-                        <p-autoComplete
-                            field="nome"
+                        <p-autoComplete 
+                            field="nome" 
                             [suggestions]="apresentacao"
-                            (completeMethod)="searchApresentacao($event)"
+                            (completeMethod)="searchApresentacao($event)" 
                             [dropdown]="true"
                             formControlName="apresentacao"
-                        ></p-autoComplete>
+                            ></p-autoComplete>
 
                         <label>Apresentação</label>
                     </span>
@@ -76,34 +76,34 @@
 
             <div class="ui-g-12">
                 <h3>Situação</h3>
-                <p-radioButton
-                    type="radio"
-                    name="groupname"
-                    value="true"
-                    formControlName="ativo"
+                <p-radioButton 
+                    type="radio" 
+                    name="groupname" 
+                    value="true" 
+                    formControlName="ativo" 
                     label="Ativo "
                     pRadioButton
                 ></p-radioButton>
-                <p-radioButton
-                    type="radio"
-                    name="groupname"
-                    value="false"
-                    formControlName="ativo"
+                <p-radioButton 
+                    type="radio" 
+                    name="groupname" 
+                    value="false" 
+                    formControlName="ativo" 
                     label="Inativo"
                     pRadioButton
                 ></p-radioButton>
             </div>
             <div class="ui-g-12">
                 <div class="ui-g-5 ui-sm-5">
-                    <button
-                        pButton
-                        type="submit"
-                        label="Cadastrar"
+                    <button 
+                        pButton 
+                        type="submit" 
+                        label="Cadastrar" 
                         [disabled]="form.invalid"
-                    ></button>
+                        ></button>
                 </div>
                 <div class="ui-g-5 ui-sm-5">
-                    <button pButton type="button" label="Cancelar"></button>
+                    <button pButton type="button" label="Cancelar" routerLink="/medicamentos"></button>
                 </div>
             </div>
         </div>
