Alterar campo quantidade aceitar somente numero prescricao dieta - BASIS-185494

--- a/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
+++ b/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
@@ -74,7 +74,7 @@
                         <div class="ui-g-12">
                             <div class="ui-g-6">
                                 <span class="md-inputfield">
-                                    <input type="text" pInputText formControlName="quantidade" />
+                                    <input type="number" pInputText formControlName="quantidade" />
                                     <label>Quantidade</label>
                                 </span>
                             </div>
