Adicionado os botões RUD Farmácia Medicamento - BASIS-186323

--- a/frontend/src/app/farmacia/farmacia/cadastro-medicamento/cadastro-medicamento.component.html
+++ b/frontend/src/app/farmacia/farmacia/cadastro-medicamento/cadastro-medicamento.component.html
@@ -11,7 +11,7 @@
                             pInputText 
                             type="text"
                             pTooltip="Informe o Prontuario." 
-                            formControlName="medicamento" 
+                            formControlName="nome" 
                             />
                         <label>Medicamento</label>
                     </span>
@@ -100,7 +100,7 @@
                         type="submit" 
                         label="Cadastrar" 
                         [disabled]="form.invalid"
-                        ></button>
+                    ></button>
                 </div>
                 <div class="ui-g-5 ui-sm-5">
                     <button pButton type="button" label="Cancelar" routerLink="/medicamentos"></button>
