--- a/frontend/src/app/farmacia/farmacia/medicamentos/medicamentos.component.html
+++ b/frontend/src/app/farmacia/farmacia/medicamentos/medicamentos.component.html
@@ -123,8 +123,16 @@
                 class="ui-button-danger"
                 [disabled]="datatable.selectedRow == null"
                 (buttonClick)="btnClick($event)"
+                name="delete"
                 icon="delete">
             </basis-datatable-button>        
         </basis-datatable>
+        
+        <p-confirmDialog #dialog header="Confirmação" icon="pi pi-exclamation-triangle">
+            <p-footer>
+                <button type="button" pButton icon="pi pi-times" label="Não" (click)="dialog.reject()"></button>
+                <button type="button" pButton icon="pi pi-check" label="Sim" (click)="dialog.accept()"></button>
+            </p-footer>
+        </p-confirmDialog>
     </div>
 </div>
