Corrigir o cadastrar e editar medicamentos - BASIS-186323

--- a/frontend/src/app/farmacia/farmacia/cadastro-medicamento/cadastro-medicamento.component.html
+++ b/frontend/src/app/farmacia/farmacia/cadastro-medicamento/cadastro-medicamento.component.html
@@ -98,7 +98,7 @@
                     <button 
                         pButton 
                         type="submit" 
-                        label="Cadastrar" 
+                        label="Salvar" 
                         [disabled]="form.invalid"
                     ></button>
                 </div>
