Alterar para exibir tipo procedimento especial, prescrição - BASIS-186311

--- a/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/diversos/diversos.component.html
+++ b/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/diversos/diversos.component.html
@@ -2,7 +2,7 @@
     <div class="ui-g-12" >
         <div class="ui-g-6">
             <span class="md-inputfield">
-                <p-dropdown placeholder="Selecione..." [options]="listaEspeciaisDiversos" formControlName="tipoProcedimentoId" required
+                <p-dropdown placeholder="Selecione..." [filter]="true" InputText [options]="listaEspeciaisDiversos" formControlName="tipoProcedimentoId" required
                     #especiaisDiversos>
                 </p-dropdown>
                 <label>Especiais Diversos</label>
