--- a/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/cirurgias-leito/cirurgias-leito.component.html
+++ b/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/cirurgias-leito/cirurgias-leito.component.html
@@ -2,7 +2,7 @@
     <div class="ui-g-12" >
         <div class="ui-g-6">
             <span class="md-inputfield">
-                <p-dropdown placeholder="Selecione..." [options]="listaCirurgiasLeito" formControlName="tipoProcedimentoId" required
+                <p-dropdown placeholder="Selecione..." [filter]="true" InputText [options]="listaCirurgiasLeito" formControlName="tipoProcedimentoId" required
                     #cirurgias>
                 </p-dropdown>
                 <label>Cirugias Leito</label>
@@ -10,4 +10,3 @@
         </div>
     </div>
 </form>
-
